--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ FRP/superconductor_predict.egg-info/PKG-INFO
 FRP/superconductor_predict.egg-info/requires.txt
 FRP/superconductor_predict.egg-info/SOURCES.txt
 FRP/superconductor_predict.egg-info/top_level.txt
+FRSP
